# ai-folder-structure-guide

./: .gitignore  CMakeLists.txt  FolderTreeService.cpp  FolderTreeService.h  Main.qml  OllamaService.cpp  OllamaService.h  main.cpp
